Quitamos end point de landing y controlador tras reunión. No tiene sentido añadir rutas extra que hacen lo mismo
